--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.13",
     "@nestjs/swagger": "^11.0.5",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.13",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "firebase-admin": "^13.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -42,6 +45,7 @@
     "qrcode.react": "^4.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.20",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
