--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "npm run clean:port && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "clean:port": "npx kill-port 3001",
+    "start:dev": "npm run clean:port && nest start --watch",
+    "start:debug": "npm run clean:port && nest start --debug --watch"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -69,6 +72,7 @@
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "kill-port": "^2.0.1",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
